# CASPAR

./: .dockerignore  .gitignore  GUIA_CASPAR.md  GUIA_TECNICO.md  HANDOFF.md  README.md  build_narratives.py  ccss_canonical.sql  docker-compose.yml  fix_add_nginx_build.py  fix_build_idempotent.py  fix_doc_guia_nginx.py  fix_doc_readme_nginx.py  fix_nginx_entry_point.py  fix_show_config_snippet.py  fix_snippet_wiring.py  install.sh  patch_database.py  pyproject.toml  report_html.py  requirement.txt  schema.sql  test_httpd.conf  test_nginx.conf
cli/: main.py
config_assessment/: __init__.py
core/: benchmark_extractor.py  build.py  ccss.py  cve_enricher.py  generic_build.py  llm_client.py  models.py  plugin_detector.py  plugin_scaffolder.py  rag.py  report_dashboard.py  report_dashboard_online.py  report_html.py  runtime.py  target.py  version_prefetch.py
data/: ccss_canonical.sql
scripts/: fix_ac_consistency.py  fix_add_dashboard_format.py  fix_add_online_flag.py  fix_amp_and_cleanup.py  fix_build_narratives_service.py  fix_dashboard_footer.py  fix_html_cosmetics.py  fix_loadmodule_parse.py  fix_markdown_fences.py  fix_narrative_target_agnostic.py  fix_narrative_wiring.py  fix_rag_multilevel_sections.py  fix_readme_nvd_section.py  fix_strip_why_prefix.py  gerar_relatorio.py  reorganize.py
test_target/: Dockerfile  README_TESTE.md  httpd.conf  httpd_absence.conf  nginx.conf  nginx_absence.conf  nginx_realistic.conf
tests/: test_apache.py  test_benchmark_extractor.py  test_ccss.py  test_chain_pipeline.py  test_cve_enricher.py  test_dashboard_exploits.py  test_docker_config_paths.py  test_exploit_enricher.py  test_external_plugins.py  test_fetch.py  test_full_coverage.py  test_runtime.py  (+12 more)
(+100 files in other folders)
