[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ccss-scan"
version = "0.1.0"
description = "Generic CCSS-based security configuration scoring framework"
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.0",
    "click>=8.1",
    # Phase 2+ dependencies (uncomment when needed):
    # "llama-index>=0.10",
    # "anthropic>=0.25",
    # "openpyxl>=3.1",
    # "pyparsing>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
]

[project.scripts]
ccss = "cli.main:cli"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]  # so 'from core.xxx import' works without install
addopts = "-v --tb=short"

[tool.hatch.build.targets.wheel]
packages = ["core", "plugins", "cli"]
